Fix absurdly big header gap in case of category/tag/search results page

--- a/resources/assets/sass/_content.scss
+++ b/resources/assets/sass/_content.scss
@@ -83,6 +83,20 @@ a.more-link,
   margin: 81px auto 0;
   max-width: 55.556em;
 }
+
+.site-content.with-page-title {
+  margin-top: 0;
+
+  .page-title {
+    margin-top: 20px;
+    margin-bottom: 27px;
+  }
+
+  .widget-area {
+    margin-top: 81px;
+  }
+}
+
 @media screen and (max-width: 59.306em) {
   .site-content {
     max-width: 41.667em;
